CMP - Modal: Corrected close button alignment

--- a/src/component/widget/modal/style.scss
+++ b/src/component/widget/modal/style.scss
@@ -66,6 +66,7 @@ body.modal-open {
 
         button {
             grid-area: close;
+            justify-self: end;
             color: $gray;
 
             &,
